<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.ifspsaocarlos.agendafirebase.activity.MainActivity">
    <item
        android:id="@+id/pesqContato"
        android:title="@string/nome_do_contato"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filtrar"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/filtrar"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/filtroTodos"
                android:title="@string/todos"
                app:showAsAction="never" />
            <item
                android:id="@+id/filtroAmigos"
                android:title="@string/amigos"
                app:showAsAction="never" />
            <item
                android:id="@+id/filtroFamilia"
                android:title="@string/fam_lia"
                app:showAsAction="never" />
            <item
                android:id="@+id/filtroOutros"
                android:title="@string/outros"
                app:showAsAction="never" />
        </menu>
    </item>


</menu>

